docs/examples/invalid/semanticErr/extension/class/sameNameInclude.wacc
{
  include "sameNameInclude2.wacc"

  class A {
  
  }

  skip
}
